--- a/app/src/main/res/layout/activity_goods2.xml
+++ b/app/src/main/res/layout/activity_goods2.xml
@@ -49,6 +49,14 @@
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"/>
+    <ExpandableListView
+        android:id="@+id/exListView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:childIndicator="@null"
+        android:groupIndicator="@null" >
+    </ExpandableListView>
 
 
    <!-- <com.example.hongaer.shppingmall2.app.BanViewPager
