--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,6 +168,7 @@
             android:text="第三方登录" />
 
         <LinearLayout
+            android:id="@id/ll_goods_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
@@ -181,7 +182,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@null"
-                android:src="@drawable/icon_weibo" />
+                android:src="@drawable/taobao" />
 
             <ImageButton
                 android:id="@+id/ib_qq"
