--- a/app/src/main/res/layout/activity_position.xml
+++ b/app/src/main/res/layout/activity_position.xml
@@ -7,6 +7,7 @@
     tools:context=".user.view.PositionActivity">
 
 <LinearLayout
+    android:id="@+id/ll_position"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -185,7 +186,7 @@
         android:layout_alignParentLeft="true"
         android:drawablePadding="285dp"
         android:drawableRight="@drawable/home_arrow_right"
-        android:padding="11dp"
+        android:padding="9dp"
         android:text="分享app"
         android:textColor="#000000"
         android:textSize="17dp" />　
