--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -13,6 +13,7 @@
         android:layout_margin="10dp"
         android:background="#fff">
     <TextView
+        android:id="@+id/tv_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -41,24 +42,32 @@
         android:layout_height="match_parent">
               <!--LinearLayout-->
             <LinearLayout
+                android:id="@+id/ll_cart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                    <!--RecyclerView-->
-                <android.support.v7.widget.RecyclerView
+               <!-- <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="0dp"
-                    android:background="#eee" />
+                    android:background="#eee" />-->
+                <ExpandableListView
+                    android:id="@+id/exListView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:childIndicator="@null"
+                    android:groupIndicator="@null" >
+                </ExpandableListView>
+
                   <!--LinearLayout(结算)-->
                 <LinearLayout
-                    android:id="@+id/ll_check_all"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:orientation="horizontal"
-                    android:visibility="visible">
+                    android:layout_height="50dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
                     <CheckBox
                         android:id="@+id/checkbox_all"
                         android:layout_width="wrap_content"
@@ -72,75 +81,82 @@
                         android:text="全选"
                         android:textColor="#303235"
                         android:textSize="15sp" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="合计:"
-                        android:textColor="#303235"
-                        android:textSize="15sp" />
-                    <TextView
-                        android:id="@+id/tv_shopcart_total"
+                    <LinearLayout
+                        android:id="@+id/ll_info"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:padding="10dp"
-                        android:text="￥0.00"
-                        android:textColor="#ed3f3f"
-                        android:textSize="15sp" />
-                    <Button
-                        android:id="@+id/btn_check_out"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#ed3f3f"
-                        android:text="去结算"
-                        android:textColor="#fff" />
+                        android:orientation="horizontal"
+                        android:layout_weight="4">
 
-                </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:text="合计:"
+                            android:textColor="#303235"
+                            android:textSize="15sp" />
+                        <TextView
+                            android:id="@+id/tv_shopcart_total"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:padding="10dp"
+                            android:text="￥0.00"
+                            android:textColor="#ed3f3f"
+                            android:textSize="15sp" />
+                        <Button
+                            android:id="@+id/btn_check_out"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="#ed3f3f"
+                            android:text="去结算"
+                            android:textColor="#fff" />
+                    </LinearLayout>
+
+
                   <!--3:LinearLayout(删除)-->
                 <LinearLayout
-                    android:id="@+id/ll_delete"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:orientation="horizontal"
-                    android:padding="5dp"
-                    android:visibility="visible">
-                    <CheckBox
-                        android:id="@+id/cb_all"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_weight="1"
-                        android:button="@null"
-                        android:drawableLeft="@drawable/checkbox_selector"
-                        android:drawablePadding="10dp"
-                        android:padding="10dp"
-                        android:paddingLeft="0dp"
-                        android:text="全选"
-                        android:textColor="#303235"
-                        android:textSize="15sp" />
-                    <Button
-                        android:id="@+id/btn_delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:background="@drawable/words9"
-                        android:text="删除"
-                        android:textColor="#303235"
-                        android:textSize="15sp" />
-                    <Button
-                        android:id="@+id/btn_collection"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="15dp"
-                        android:background="@drawable/wordsred9"
-                        android:text="收藏"
-                        android:textColor="#ed3f3f"
-                        android:textSize="15sp" />
-                </LinearLayout>
-            </LinearLayout>
+                android:id="@+id/ll_shar"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
+                <TextView
+                    android:id="@+id/tv_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="收藏"
+                    android:background="@color/orange"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginRight="5dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tv_delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/crimson"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="删除"
+                    android:textColor="#FAFAFA"
+                    />
+
+               </LinearLayout>
+             </LinearLayout>
+            </LinearLayout>
                <!--购车显示布局 empty_cart.xml-->
-            <include layout="@layout/empty_cart" />
+            <include
+                android:id="@+id/layout_cart_empty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                layout="@layout/cart_empty"
+                android:visibility="gone"/>
+
         </FrameLayout>
 </LinearLayout>
