--- a/app/src/main/res/layout/item_shop_cart.xml
+++ b/app/src/main/res/layout/item_shop_cart.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="18dp"
         android:background="#11000000" />
-    <LinearLayout
+  <!--  <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -38,7 +38,7 @@
             android:textColor="#404040"
             android:textSize="16sp"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
     <!--线性布局-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,24 +46,30 @@
         android:orientation="horizontal"
         android:padding="10dp">
         <CheckBox
-            android:id="@+id/cb_gov"
+            android:id="@+id/check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:button="@drawable/checkbox_selector"
-            android:checked="true"
-            android:clickable="false" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="4dp"
+            android:button="@drawable/check_box_bg"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:gravity="center"
+            android:minHeight="64dp"
+            android:minWidth="32dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:visibility="visible" />
         <ImageView
             android:id="@+id/iv_gov"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/new_img_loading_1"
             android:scaleType="fitXY" />
-        <LinearLayout
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:id="@+id/rl_no_edtor"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:orientation="vertical">
+            android:layout_marginLeft="5dp">
             <TextView
                 android:id="@+id/tv_desc_gov"
                 android:layout_width="wrap_content"
@@ -74,28 +80,130 @@
 200U 4G 500G R5-M230 1G 独显 蓝牙 Win8.1 黑色） "
                 android:textColor="#404040"
                 android:textSize="16sp" />
-            <LinearLayout
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentStart="true">
                 <TextView
                     android:id="@+id/tv_price_gov"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="￥0.0"
                     android:textColor="#f00"
                     android:textSize="16sp" />
-                <com.example.hongaer.shoppingmall2.shoppingcart.view.AddSubView
+                <TextView
+                    android:id="@+id/tv_discount_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/tv_price"
+                    android:text=""
+                    android:textColor="@color/grey_color2"
+                    android:textSize="10dp"
+                    />
+                <TextView
+                    android:id="@+id/tv_buy_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_alignParentRight="true"
+                    android:text="X 1"
+                    android:textColor="@color/grey_color2"
+                    android:textSize="10dp"
+                    />
+                 </RelativeLayout>
+            </RelativeLayout>
+                <LinearLayout
+                    android:id="@+id/ll_edtor"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="13dp"
+                    android:visibility="gone"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+                        <RelativeLayout
+                            android:id="@+id/ll_change_num"
+                            android:layout_width="match_parent"
+                            android:layout_height="26dip"
+                            android:gravity="center"
+                            android:layout_marginTop="20dp"
+
+                            android:orientation="horizontal">
+                            <Button
+                                android:id="@+id/bt_reduce"
+                                android:layout_width="26dip"
+                                android:layout_height="26dip"
+                                android:clickable="false"
+                                android:focusableInTouchMode="false"
+                                android:background="@drawable/cart_minus_selector"/>
+                            <EditText
+                                android:id="@+id/et_num"
+                                android:layout_toRightOf="@id/bt_reduce"
+                                android:layout_width="40dip"
+                                android:layout_height="26dip"
+                                android:inputType="number"
+                                android:gravity="center"
+                                android:focusableInTouchMode="true"
+                                android:focusable="true"
+                                android:text="1"
+                                android:background="@drawable/icon_cart_count"
+                                style="@style/textStyle.Normal.black" />
+
+                            <Button
+                                android:id="@+id/bt_add"
+                                android:layout_toRightOf="@id/et_num"
+                                android:layout_width="26dip"
+                                android:layout_height="26dip"
+                                android:focusable="false"
+                                android:focusableInTouchMode="false"
+                                android:background="@drawable/cart_plus_selector"/>
+
+                        </RelativeLayout>
+
+                        <TextView
+                            android:id="@+id/tv_colorsize"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="颜色：黑色；尺码：29"
+                            android:layout_gravity="left"
+                            android:textColor="@color/grey_color2"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_goods_delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:text="删除"
+                        android:background="@color/orange"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:textColor="@color/colorWhite"/>
+                </LinearLayout>
+
+               <!-- <com.example.hongaer.shoppingmall2.shoppingcart.view.AddSubView
                     android:id="@+id/AddSubView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+                    android:layout_height="wrap_content" />-->
+
+
         </LinearLayout>
     </LinearLayout>
 
     <!--线-->
 
-</LinearLayout>
