--- a/app/src/main/res/layout/activity_address_list.xml
+++ b/app/src/main/res/layout/activity_address_list.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.hongaer.shoppingmall2.user.view.address.AddressListActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,47 +31,50 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <com.chanven.lib.cptr.PtrClassicFrameLayout
-        android:id="@+id/address_list_pcl"
-        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f0f0f0"
-        cube_ptr:ptr_resistance="1.7"
-        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-        cube_ptr:ptr_duration_to_close="200"
-        cube_ptr:ptr_duration_to_close_header="1000"
-        cube_ptr:ptr_keep_header_when_refresh="true"
-        cube_ptr:ptr_pull_to_fresh="false"
-        android:layout_marginBottom="55dip">
 
-        <ListView
-            android:id="@+id/address_listv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@color/separator_line"
-            android:dividerHeight="@dimen/margin_space_half"
-            android:fadingEdge="none"
-            android:fastScrollEnabled="false"
-            android:footerDividersEnabled="false"
-            android:headerDividersEnabled="false"
-            android:scrollbars="none"
-            android:background="@color/bg_activity"
-            android:smoothScrollbar="true" />
-    </com.chanven.lib.cptr.PtrClassicFrameLayout>
+      <com.baoyz.widget.PullRefreshLayout
+          android:id="@+id/swipeRefreshLayout"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+
+          <ListView
+              android:id="@+id/address_listv"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:divider="@color/separator_line"
+              android:dividerHeight="@dimen/margin_space_half"
+              android:fadingEdge="none"
+              android:fastScrollEnabled="false"
+              android:footerDividersEnabled="false"
+              android:headerDividersEnabled="false"
+              android:scrollbars="none"
+              android:background="@color/bg_activity"
+              android:smoothScrollbar="true" />
+
+      </com.baoyz.widget.PullRefreshLayout>
+
+
+
     </LinearLayout>
-    <Button
-        android:id="@+id/add_address_btn"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_button"
-        android:text="@string/address_add"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/button_selector"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft="@dimen/margin_space"
-        android:layout_marginRight="@dimen/margin_space"
-        android:layout_marginBottom="@dimen/margin_space"
-        />
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/add_address_btn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_button"
+            android:text="@string/address_add"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/button_selector"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="@dimen/margin_space"
+            android:layout_marginRight="@dimen/margin_space"
+            android:layout_marginBottom="@dimen/margin_space"
+            />
+    </LinearLayout>
 
 
-</FrameLayout>
+
+</RelativeLayout>
